syntax = "proto3";
package abrpc;

import "google/protobuf/empty.proto";

option go_package = "github.com/alphabill-org/alphabill/internal/alphabill/alphabill;alphabill";

service AlphabillService {
  rpc ProcessTransaction(Transaction) returns (google.protobuf.Empty) {};
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {};
  rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {};
  rpc GetRoundNumber(google.protobuf.Empty) returns (GetRoundNumberResponse) {};
}

message Transaction {
  bytes order = 1;
}

message GetBlocksRequest {
  uint64 block_number = 1;
  uint64 block_count = 2;
}

message GetBlocksResponse {
  reserved 1;
  uint64 max_block_number = 2;
  repeated bytes blocks = 3;
  uint64 max_round_number = 4;
  uint64 batch_max_block_number = 5;
}

message GetBlockRequest {
  uint64 block_no = 1;
}

message GetBlockResponse {
  reserved 1;
  bytes block = 2;
}

message GetRoundNumberResponse {
  uint64 round_number = 1;
}

